--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "release": "yarn && versett-devtools release",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=10.15.0",
+    "npm": ">=6.5.0",
+    "yarn": ">=1.13.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/versett/eslint-plugin-versett.git"
