--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2"
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "typescript-eslint-parser": "^21.0.2"
   },
   "lint-staged": {
     "*.{js,json,css}": [
