--- a/package.json
+++ b/package.json
@@ -25,13 +25,7 @@
   },
   "homepage": "https://github.com/versett/eslint-plugin-versett#readme",
   "devDependencies": {
-    "@versett/versett-devtools": "^1.9.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "typescript-eslint-parser": "^21.0.2"
+    "@versett/versett-devtools": "^1.9.0"
   },
   "lint-staged": {
     "*.{js,json,css}": [
@@ -42,5 +36,12 @@
   "release": {
     "getLastRelease": "last-release-git"
   },
-  "dependencies": {}
+  "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.3",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "typescript-eslint-parser": "^21.0.2"
+  }
 }
