--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,4 @@
-### versett-devtools gitignore template – DO NOT EDIT ###  
+### versett-devtools gitignore template – DO NOT EDIT ###
 
 # Logs
 logs
@@ -35,6 +35,7 @@ bower_components
 build/Release
 
 # Dependency directories
+node_modules/
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -54,6 +55,9 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+
+# Hidden OS files
+.DS_Store
 
 # dotenv environment variables file
 .env.local
