--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   "release": {
     "getLastRelease": "last-release-git"
   },
-  "dependencies": {
+  "peerDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2"
+  },
+  "dependencies": {
     "eslint-plugin-react": "^7.12.4",
     "typescript-eslint-parser": "^21.0.2"
   }
