--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2"
+    "eslint-plugin-jest": "^22.1.3"
   }
 }
