--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "peerDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.0",
+    "eslint": ">= 5.6.0 < 6",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.3"
   }
