--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "getLastRelease": "last-release-git"
   },
   "peerDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.x",
     "eslint": ">= 5.6.0 < 6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.3"
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jest": "22.x"
   }
 }
