--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "babel-eslint": ">= 10.0.1",
     "eslint": ">= 5.6.0 < 6",
     "eslint-plugin-import": ">= 2.14.0",
-    "eslint-plugin-jest": ">= 22.1.3"
+    "eslint-plugin-jest": ">= 22.1.3",
+    "eslint-config-prettier": "^2.9.0"
   },
   "husky": {
     "hooks": {
