--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint": ">= 5.6.0 < 6",
     "eslint-plugin-import": ">= 2.14.0",
     "eslint-plugin-jest": ">= 22.1.3",
-    "eslint-config-prettier": ">= 4.0.0"
+    "eslint-config-prettier": ">= 4.0.0",
+    "eslint-plugin-prettier": ">= 3.0.1"
   },
   "husky": {
     "hooks": {
