--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/versett/eslint-plugin-versett.git"
   },
-  "author": "",
+  "author": "versett.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/versett/eslint-plugin-versett/issues"
