--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-config-prettier": ">= 4.0.0",
     "eslint-plugin-import": ">= 2.14.0",
     "eslint-plugin-jest": ">= 22.1.3",
-    "eslint-plugin-prettier": ">= 3.0.1"
+    "eslint-plugin-prettier": ">= 3.0.1",
+    "eslint-plugin-react-hooks": ">=2.0.1"
   },
   "husky": {
     "hooks": {
