--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "getLastRelease": "last-release-git"
   },
   "peerDependencies": {
-    "babel-eslint": ">= 10.0.1",
-    "eslint": ">= 5.6.0 < 6",
-    "eslint-config-prettier": ">= 4.0.0",
-    "eslint-plugin-import": ">= 2.14.0",
-    "eslint-plugin-jest": ">= 22.1.3",
-    "eslint-plugin-prettier": ">= 3.0.1",
-    "eslint-plugin-react-hooks": ">=2.0.1"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^7",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "husky": {
     "hooks": {
@@ -48,7 +48,6 @@
       "git add"
     ]
   },
-  "dependencies": {},
   "engines": {
     "node": ">= 10",
     "npm": ">= 5.6.0",
